# cubera

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: build-macos-dmg.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/branding/: splashes.txt
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  branding.rs  download.rs  forge.rs  launch.rs  lib.rs  loaders.rs  main.rs  manifest.rs  modrinth.rs  paths.rs  skin.rs
