[package]
name = "cubera"
version = "0.1.0"
description = "Cubera — a modern Minecraft launcher for macOS"
authors = ["Cubera"]
edition = "2021"

[lib]
name = "cubera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
dirs = "6"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
zip = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
base64 = "0.22"
regex = "1"
semver = "1"
